--- a/homepage.html
+++ b/homepage.html
@@ -7,14 +7,47 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <h1>This is our home page  </h1>
-    <nav>
-        <a href="index.html">index page </a>
-        <a href="profile.html">profile </a>
+    <h1>Title: Social Media Songs ~ to change </h1>
+    <nav class = "topbar">
+        <a href="profile.html">My Profile</a>
+        <a href="yoursongs.html">My Songs</a>
+        <a href="about.html">About</a>
+        <input type="text" placeholder="Search Songs">
     </nav>
-    
 </header>
 <body>
+    <div id = "wrapper">
+
+
+        <div id = "center">
+            <p>
+                was thinking this could be like the main page where you scroll through posts
+                <br><br>
+                trying to figure out how to make it post like i.e. like IG or FB/Twitter
+            </p>
+        </div>
+
+        <div id = "right">
+            <p>
+                thought this could be like side of website giving you options to do idk
+                <br>
+                profile img maybe
+                <br>
+                number of friends
+                <br>
+                number of posts
+
+            </p>
+
+
+        </div>
+
+
+    </div>
+
     
 </body>
+<footer>
+    <p>End of Website @Mason and @Gus final project</p>
+</footer>
 </html>
