--- a/signup.html
+++ b/signup.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up Page</title>
     <h1>Sign up!</h1>
+
+    <link rel="stylesheet" href="login_style.css">
 </header>
 <body>
     <h3>Please enter your information</h3>
-    
+
+    <div id = "box">
+        <form id = "input">
+        First Name: <input type = "text" name = "firstname" id= "fname" required> 
+        <br>
+        Last Name: <input type = "text" name = "lastname" id= "lname" required> 
+        <br>
+        Date of Birth: <input type = "text" name = "bday" id= "bday" required> 
+        <br>
+        E-mail:<input type = "text" name = "email" id= "email" required> 
+        <br>
+        Password:<input type = "password" name = "psw" id = "password" required>
+        <br><br>
+        <input type = "submit" value = "Login!"><input type="reset">
+    </form>
+    </div>
+
+
     
 </body>
 </html>
