--- a/homepage.html
+++ b/homepage.html
@@ -16,10 +16,8 @@
     </nav>
 </header>
 <body>
-    <div id = "wrapper">
-
-
-        <div id = "center">
+    <div id = "wrapper" class = "border">
+        <div id = "center" class = "border">
             <p>
                 was thinking this could be like the main page where you scroll through posts
                 <br><br>
@@ -27,7 +25,7 @@
             </p>
         </div>
 
-        <div id = "right">
+        <div id = "right" class = "border">
             <p>
                 thought this could be like side of website giving you options to do idk
                 <br>
@@ -48,6 +46,6 @@
     
 </body>
 <footer>
-    <p>End of Website @Mason and @Gus final project</p>
+    <p class = "border">End of Website @Mason and @Gus final project</p>
 </footer>
 </html>
