--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
 
 
     <div id = "box">
-        <form id = "input">
+        <form action = "homepage.html "input">
         E-mail:<input type = "text" name = "email" id= "email" required> 
         <br>
         Password:<input type = "password" name = "psw" id = "password" required>
