--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id = "box">
-        <form id = "input">
+        <form action = profile.html id = "input">
         First Name: <input type = "text" name = "firstname" id= "fname" required> 
         <br>
         Last Name: <input type = "text" name = "lastname" id= "lname" required> 
