--- a/login.html
+++ b/login.html
@@ -23,10 +23,9 @@
 
     <div id = "box">
         <form action = "homepage.html "input">
-        E-mail:<input type = "text" name = "email" id= "email" required> 
+        <p> E-mail:<input type = "text" name = "email" id= "email" required> </p>
+        <p>Password:<input type = "password" name = "psw" id = "password" required></p>
         <br>
-        Password:<input type = "password" name = "psw" id = "password" required>
-        <br><br>
         <input type = "submit" value = "Login!"><input type="reset">
     </form>
     </div>
