--- a/signup.html
+++ b/signup.html
@@ -20,16 +20,17 @@
 
     <div id = "box">
         <form action = profile.html id = "input">
-        First Name: <input type = "text" name = "firstname" id= "fname" required> 
+        <p> First Name: <input type = "text" name = "firstname" id= "fname" required> </p>
+        <p> Last Name: <input type = "text" name = "lastname" id= "lname" required> </p>
+        <p>Date of Birth: <input type = "text" name = "bday" id= "bday" required></p>  
+        <p>Gender: 
+            <p>Male<input type="radio" name="gender" id="gendermale"></p>
+
+            <p>Female<input type="radio" name="gender" id="genderfemale"></p></p>
+
+        <p>E-mail:<input type = "text" name = "email" id= "email" required> </p>
+        <p>Password:<input type = "password" name = "psw" id = "password" required> </p>
         <br>
-        Last Name: <input type = "text" name = "lastname" id= "lname" required> 
-        <br>
-        Date of Birth: <input type = "text" name = "bday" id= "bday" required> 
-        <br>
-        E-mail:<input type = "text" name = "email" id= "email" required> 
-        <br>
-        Password:<input type = "password" name = "psw" id = "password" required>
-        <br><br>
         <input type = "submit" value = "Login!"><input type="reset">
     </form>
     </div>
