--- a/profile.html
+++ b/profile.html
@@ -7,16 +7,21 @@
 
     <h1>Welcome to your profile, @Name</h1>
     <link rel="stylesheet" href="profile_style.css">
-    <nav class = "topbar">
+    <nav class="topbar">
         <a href="homepage.html">Home</a>
         <a href="about.html">About</a>
         <input type="text" placeholder="Search Songs">
     </nav>
 </header>
+
 <body>
-    <div>
-        maybe profile pic? 
+    <div id="profile_photo">
+        <form action=""></form>
+        <div>
+            <input type="file">
+            <img id="photo" src="#" alt="Profile Photo">
+        </div>
     </div>
-    
 </body>
+
 </html>
