--- a/homepage.html
+++ b/homepage.html
@@ -7,25 +7,50 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <h1>Title: Social Media Songs ~ to change </h1>
-    <nav class = "topbar">
-        <a href="profile.html">My Profile</a>
-        <a href="yoursongs.html">My Songs</a>
-        <a href="about.html">About</a>
-        <input type="text" placeholder="Search Songs">
+    <h1><img src="banner.jpg" alt="banner" id="banner"></h1>
+    <p>
+        Name Ideas:
+        <ul>
+            <li>Social Songs</li>
+            <li>Groove</li>
+            <li>Fade</li>
+            <li>Cypher</li>
+            <li>Flow</li>
+            <li>Block Party</li>
+            <li>Off the charts</li>
+            <li>Reverb</li>
+        </ul>
+    </p>
+    <nav class="topbar">
+        <a class="left_nav" href="profile.html">My Profile</a>
+        <a class="left_nav" href="yoursongs.html">My Songs</a>
+        <a class="left_nav" href="about.html">About</a>
+        <div class="nav_right">
+            <span id="google_search">
+                <form id="search_form" action="https://google.com">
+                    <input type="text" placeholder="Search Songs" name="q" id="value_search">
+                    <input type="button" value="Go">
+                </form>
+            </span>
+            <a class="right_nav" id="signup" href="signup.html">Sign Up</a>
+            <a class="right_nav" id="login" href="login.html">Login</a>
+        </div>
     </nav>
 </header>
+
 <body>
-    <div id = "wrapper" class = "border">
-        <div id = "center" class = "border">
+    <div id="wrapper" class="border">
+        <div id="center" class="border">
             <p>
                 was thinking this could be like the main page where you scroll through posts
                 <br><br>
                 trying to figure out how to make it post like i.e. like IG or FB/Twitter
+                <br><br>
             </p>
+            
         </div>
 
-        <div id = "right" class = "border">
+        <div id="right" class="border">
             <p>
                 thought this could be like side of website giving you options to do idk
                 <br>
@@ -43,9 +68,17 @@
 
     </div>
 
-    
+
 </body>
 <footer>
-    <p class = "border">End of Website @Mason and @Gus final project</p>
+    <p class="border">End of Website @Mason and @Gus final project</p>
 </footer>
+
 </html>
+
+<script type="text/javascript">
+    document.getElementById(search_form).onsubmit = function() {
+        window.location = 'http://www.google.com/search?q=site:yoursitename.com ' + document.getElementById("value_search").value;
+        return false;
+    }
+</script>
