--- a/login.html
+++ b/login.html
@@ -6,29 +6,33 @@
     <title>Log in page</title>
     <link rel="stylesheet" href="login_style.css">
 </header>
+
 <body>
-    <h1>Login!</h1>
-    <div>
-        <ul>
-            <li>If you already have an account then enter your email and password!</li>
-        
-            <li>Or sign up below!</li>
-        </ul>
+    <main>
+        <a href="homepage.html">Home</a>
+        <h1>Login!</h1>
+        <div>
+            <ul>
+                <li>If you already have an account then enter your email and password!</li>
 
-        <form id = "signup" action="signup.html">
-            <input type="submit" value="Sign Up!" />
-        </form>
-    </div>
+                <li>Or sign up below!</li>
+            </ul>
+
+            <form id="signup" action="signup.html">
+                <input type="submit" value="Sign Up!" />
+            </form>
+        </div>
 
 
-    <div id = "box">
-        <form action = "homepage.html "input">
-        <p> E-mail:<input type = "text" name = "email" id= "email" required> </p>
-        <p>Password:<input type = "password" name = "psw" id = "password" required></p>
-        <br>
-        <input type = "submit" value = "Login!"><input type="reset">
-    </form>
-    </div>
-    
+        <div id="box">
+            <form action="homepage.html ">
+                <p class="info">E-mail:<input type="text" name="email" id="email" required> </p>
+                <p class="info">Password:<input type="password" name="psw" id="password" required></p>
+                <br>
+                <input type="submit" value="Login!"><input type="reset">
+            </form>
+        </div>
+    </main>
 </body>
+
 </html>
