--- a/homepage.html
+++ b/homepage.html
@@ -14,10 +14,10 @@
             <li>Social Songs</li>
             <li>Groove</li>
             <li>Fade</li>
-            <li>Cypher</li>
-            <li>Flow</li>
+            <li>Cypher*</li>
+            <li>Flow*</li>
             <li>Block Party</li>
-            <li>Off the charts</li>
+            <li>Off the charts*</li>
             <li>Reverb</li>
         </ul>
     </p>
@@ -25,6 +25,8 @@
         <a class="left_nav" href="profile.html">My Profile</a>
         <a class="left_nav" href="yoursongs.html">My Songs</a>
         <a class="left_nav" href="about.html">About</a>
+        <a class="right_nav" id="signup" href="signup.html">Sign Up</a>
+        <a class="right_nav" id="login" href="login.html">Login</a>
         <div class="nav_right">
             <span id="google_search">
                 <form id="search_form" action="https://google.com">
@@ -32,8 +34,6 @@
                     <input type="button" value="Go">
                 </form>
             </span>
-            <a class="right_nav" id="signup" href="signup.html">Sign Up</a>
-            <a class="right_nav" id="login" href="login.html">Login</a>
         </div>
     </nav>
 </header>
@@ -41,6 +41,7 @@
 <body>
     <div id="wrapper" class="border">
         <div id="center" class="border">
+                <textarea id = "post" name = "post" rows = "1" cols = "50"></textarea>
             <p>
                 was thinking this could be like the main page where you scroll through posts
                 <br><br>
@@ -61,7 +62,6 @@
                 number of posts
 
             </p>
-
 
         </div>
 
