--- a/homepage.html
+++ b/homepage.html
@@ -41,29 +41,24 @@
 <body>
     <div id="wrapper" class="border">
         <div id="center" class="border">
-                <textarea id = "post" name = "post" rows = "1" cols = "50"></textarea>
-            <p>
-                was thinking this could be like the main page where you scroll through posts
-                <br><br>
-                trying to figure out how to make it post like i.e. like IG or FB/Twitter
-                <br><br>
-            </p>
+            Post a song or album:<textarea id = "post" name = "post" rows = "1" cols = "110"></textarea>
+
             
         </div>
 
         <div id="right" class="border">
             <p>
-                thought this could be like side of website giving you options to do idk
-                <br>
-                profile img maybe
-                <br>
-                number of friends
-                <br>
-                number of posts
+                <ul>
+                    <li>Name</li>
+                    <li>Number of Friends</li>
+                    <li>Number of Posts</li>
+                    <li>Top Song</li>
+                    <li>etc</li>
 
+             </ul>
             </p>
-
         </div>
+        
 
 
     </div>
