few edits ~ feel like getting close to needing js and db

--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
             <span id="google_search">
                 <form id="search_form" action="https://google.com">
                     <input type="text" placeholder="Search Songs" name="q" id="value_search">
-                    <input type="button" value="Go">
+                    <input id = "go" type="button" value="Go">
                 </form>
             </span>
         </div>
