--- a/homepage.html
+++ b/homepage.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Songs Social Media</title>
 
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <!--
+        SWITCHED link
+        <link rel="stylesheet" href="style.css">
+    -->
+    <link rel="stylesheet" href="">
     <h1><img src="banner.jpg" alt="banner" id="banner"></h1>
     <p>
         Name Ideas:
@@ -77,7 +81,7 @@
                 </ul>
 
             </div>
-
+            
         </div>
 
         <div id="right" class="border">
