--- a/homepage.html
+++ b/homepage.html
@@ -47,6 +47,8 @@
                     <a id="loginbutton">Login
                     </a>
                 </div>
+                <!--TOOK this search bar out to use bottom bigger one
+
                 <div class="navbar-item has-text-centered ">
                     <a>
                         <form class="mt-4" id="search_form" action="https://google.com">
@@ -55,6 +57,7 @@
                         </form>
                     </a>
                 </div>
+                -->
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
@@ -74,6 +77,7 @@
             <div class="container is-wide-screen">
                 <h1 class="is-size-3 has-text-weight-bold" style="font-family:Verdana, Geneva, Tahoma, sans-serif">Cypher Songs</h1>
                 <!-- will need to fix this part-->
+
                 <p class="mt-5">
                     <input type="text" class="input is-rounded has-text-centered" placeholder="Search for a song/artist/album"  width="50%">
                 </p>
