--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="columns">
                 <!-- MAIN CONTENT IN MIDDLE-->
-                <div class="section column is-8 pl-6 pr-6 pt-0">
+                <div class="section column is-three-fifths is-offset-one-fifth-widescreen pl-6 pr-6 pt-0 is-offset-2-desktop">
                     <div class="card mb-6">
                         <div class="card-image">
                             <div class="image is-3by2">
@@ -166,10 +166,10 @@
 
                 </div>
                 <!-- PROFILE CONTENT ON RIGHT SIDE -->
-                <div class="column is-4 has-background-light p-6 is-offset-6"  style="position:fixed; height:50%; width:20%" >
+                <!-- <div class="column has-background-light p-6" > -->
 
                     <!--Message for user contact us-->
-                    <div class="message is-medium hero-body is-link"  style="position:fixed">
+                    <div class="message is-medium hero-body is-link is-offset-0" style="height:50%">
                         <div class="message-header">
                             Your Profile
                         </div>
@@ -184,7 +184,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
 
         </div>
