--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <body>
     <!-- NAV Section-->
-    <div class="navbar has-background-info">
+    <div class="navbar has-background-black has-text-white">
         <div class="navbar-brand">
             <div class="navbar-item">
                 <div class="navbar-item">
-                    <!-- find imagee or Logo maybe from font awesome-->
+                    <!-- find image or Logo maybe from font awesome-->
                     <a>
-                        <img src="images/logo.png">
+                        <img src="images/smallLogo.png">
                     </a>
                 </div>
                 <i class="far fa-speakers"></i>
@@ -37,23 +37,26 @@
         <div class="navbar-menu">
             <div class="navbar-start">
                 <div class="navbar-item">
-                    <a id="my_profile_button" class="button-is-light has-text-weight-bold has-text-black">Profile</a>
+                    <a id="my_profile_button" class="button-is-light has-text-weight-bold has-text-white">Profile</a>
                 </div>
                 <div class="navbar-item">
-                    <a id="loginbutton" class="has-text-weight-bold has-text-black">Login</a>
+                    <a id="loginbutton" class="has-text-weight-bold has-text-white">Login</a>
                 </div>
             </div>
-            <div class="navbar-item">
-                <h1 class="is-size-3 has-text-weight-bold has-text-black"
-                    style="font-family:Verdana, Geneva, Tahoma, sans-serif">Cypher Songs</h1>
-                    <!-- <a><div class="image is-96x96"><img src="images/logo-full.png" alt=""></div></a> -->
+            <!-- NEED TO FIND BETTER FONT -->
+            <div class="navbar-item p-0 pr-5">
+                <h1 class="is-size-3 has-text-weight-bold"
+                    style="font-family:'Helvetica Neue', serif; color:lightseagreen"><b>Cypher Songs</b></h1>
+                <!-- <a>
+                    <img src="images/2.png"  style="max-height: none; height:100px; width:200px">
+                </a> -->
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <a class="has-text-weight-bold has-text-black" id="sign_up_button">Sign-Up</a>
+                    <a class="has-text-weight-bold has-text-white" id="sign_up_button">Sign-Up</a>
                 </div>
                 <div class="navbar-item">
-                    <a class="has-text-weight-bold has-text-black" id="contact_button">Contact Us</a>
+                    <a class="has-text-weight-bold has-text-white" id="contact_button">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -86,7 +89,32 @@
             </button>
         </p>
     </div> -->
-    </div>
+    <!-- </div> -->
+    <section class="hero is-small has-background-info-light">
+        <div class="hero-body has-text-centered">
+            <p class="title">
+                Welcome to <br><b>Cypher Songs</b>
+            </p>
+            <p class="subtitle">
+                Have you ever went on Instagram, Snapchat or any other social media and you see people post a song - you
+                listen to it <br>
+                and like it, but when you go back the next day the song is gone? This website is made to solve that
+                problem! <br>
+                <br> All you have to do is:
+            </p>
+            <div class="columns">
+                <div class="column is-4">
+                    <p>1) Find a song you enjoy listening to and want to share with your friends</p>
+                </div>
+                <div class="column is-4">
+                    <p>2) Click the "Make a Post" button, fill in all the song details, and post the song</p>
+                </div>
+                <div class="column is-4">
+                    <p>3) Scroll through your friends post to see more songs to add to your playlists</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <div class="columns">
             <div class="section mb-3 column is-three-fifths is-offset-one-fifth pl-6 pr-6">
@@ -99,6 +127,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!--Main content: Post section plus profile info on the side-->
@@ -116,7 +145,7 @@
                     <div class="media mb-0">
                         <div class="media-left">
                             <div class="image is-96x96">
-                                <img src="images/logo.png" alt="">
+                                <img src="images/smallLogo.png" alt="">
                             </div>
                         </div>
                         <div class="media-content">
@@ -142,7 +171,7 @@
                     <div class="media mb-0">
                         <div class="media-left">
                             <div class="image is-96x96">
-                                <img src="images/logo.png" alt="">
+                                <img src="images/smallLogo.png" alt="">
                             </div>
                         </div>
                         <div class="media-content">
@@ -167,7 +196,7 @@
                     <div class="media mb-0">
                         <div class="media-left">
                             <div class="image is-96x96">
-                                <img src="images/logo.png" alt="">
+                                <img src="images/smallLogo.png" alt="">
                             </div>
                         </div>
                         <div class="media-content">
@@ -188,7 +217,8 @@
             <!-- <div class="column has-background-light p-6" > -->
 
             <!--Message for user contact us-->
-            <div class="message is-medium hero-body is-link is-offset-0" style="height:50%">
+
+            <div class="message is-halfheight is-hero is-link is-offset-0">
                 <div class="message-header">
                     Your Profile
                 </div>
@@ -203,8 +233,8 @@
                     </p>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
+    </div>
 
     </div>
     </div>
@@ -236,7 +266,7 @@
                     </div>
                 </div>
                 <div class="content has-text-centered">
-                    <a class="has-text-centered"><img src="images/logo.png" width="80" height="90"></a>
+                    <a class="has-text-centered"><img src="images/smallLogo.png" width="80" height="90"></a>
                 </div>
             </form>
         </div>
@@ -268,7 +298,7 @@
                     </div>
                 </div>
                 <div class="content has-text-centered">
-                    <a class="has-text-centered"><img src="images/logo.png" width="80" height="90"></a>
+                    <a class="has-text-centered"><img src="images/smallLogo.png" width="80" height="90"></a>
                 </div>
             </form>
         </div>
@@ -370,7 +400,7 @@ This way users can just click the link and listen to the song right away -->
     <div class="footer">
         <div class="content has-text-centered">
             <p>Website By Mason and Gus</p>
-            <a><img src="images/logo.png" width="80" height="90"></a>
+            <a><img src="images/smallLogo.png" width="80" height="90"></a>
         </div>
     </div>
 
