--- a/public/index.html
+++ b/public/index.html
@@ -222,10 +222,10 @@
                 <div class="message-body has-text-weight-bold has-text-black" >
                     <p>
                         <ul>
-                            <li ><a id="my_profile_button"s style= "text-decoration:none;">Gus Kalivas</a></li>
-                            <li>20 Friends</li>
-                            <li>1 Post</li>
-                            <li>20 Liked Songs</li>
+                            <li><a id="my_profile_info_button" style= "text-decoration:none;">Gus Kalivas</a></li>
+                            <li><a id="my_profile_friends_button" style= "text-decoration:none;">20 Friends</a></li>
+                            <li><a id="my_profile_posts_button" style= "text-decoration:none;">1 Post</a></li>
+                            <li><a id="my_profile_likes_button" style= "text-decoration:none;">20 Liked Songs</a></li>
                         </ul>
                     </p>
                 </div>
