--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
-
 </header>
 
 <body>
@@ -190,9 +188,14 @@
                             <div class="title">Mason Guell</div>
                             <div class="subtitle">@mason</div>
                         </div>
+                        <div class="media-right">
+                            <div class="column is-2 has-text-centered mt-5">
+                                <button id = "liked_song_button" class="button is-outlined is-rounded" style = "background-color: lightseagreen;"><i class="far fa-heart"></i><b>Like Song</b></button>
+                            </div>
+                        </div>
                     </div>
 
-                <div class="columns">
+                <div class="columns is-centered">
                     <div class="column is-8 mr-0">
                         <div class="card-content has-text-centered">
                             <ul>
@@ -204,9 +207,7 @@
                 <!--
                     ADDED Like Button - could remove words and just do an image - heart or thumbs up? do you like where it is, could move button too
                 -->
-                    <div class="column is-2 has-text-centered mt-5">
-                        <button id = "liked_song_button" class="button is-outlined is-rounded" style = "background-color: lightseagreen;"><i class="far fa-heart"></i><b>Like Song</b></button>
-                    </div>
+                    
                 </div>
 
                 </div>
