--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@
             <form id ="login_form">
                 <!--NAME-->
                 <div class="field">
-                    <label class="label">Username</label>
+                    <label class="label">Email</label>
                     <div class="control">
                         <input type="text" name="" id="login_username">
                     </div>
@@ -281,7 +281,7 @@
                 <div class="field">
                     <label class="label">Password</label>
                     <div class="control">
-                        <input type="text" name="" id="login_password">
+                        <input type="password" name="" id="login_password">
                     </div>
                 </div>
                 <!-- Submit  -->
@@ -307,9 +307,27 @@
         <div class="modal-content p-6 has-background-primary-light has-text-centered">
             <h1 class="has-size-3 title">Sign-up!</h1>
             <form id="signup_form">
-                <!--NAME-->
+                <div class="field">
+                    <label class="label">First Name</label>
+                    <div class="control">
+                        <input type="text" name="" id="first_name">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Last Name</label>
+                    <div class="control">
+                        <input type="text" name="" id="last_name">
+                    </div>
+                </div>
                 <div class="field">
                     <label class="label">Username</label>
+                    <div class="control">
+                        <input type="text" name="" id="user_name">
+                    </div>
+                </div>
+                <!--NAME-->
+                <div class="field">
+                    <label class="label">Email</label>
                     <div class="control">
                         <input type="text" name="" id="signup_username">
                     </div>
@@ -318,7 +336,14 @@
                 <div class="field">
                     <label class="label">Password</label>
                     <div class="control">
-                        <input type="text" name="" id="signup_password">
+                        <input type="password" name="" id="signup_password">
+                    </div>
+                </div>
+                <!--Re-enter Password-->
+                <div class="field">
+                    <label class="label">Re-enter your password</label>
+                    <div class="control">
+                        <input type="password" name="" id="signup_password2">
                     </div>
                 </div>
                 <!-- Submit  -->
