updates to side profiles

--- a/public/index.html
+++ b/public/index.html
@@ -300,10 +300,9 @@
                             <ul>
                                 <li><a id="my_profile_info_button" style="text-decoration:none;">      </a></li>
                                 <li><a id="my_profile_friends_button" style="text-decoration:none;">   </a></li>
-<!--                                 
+                                
                                 <li><a id="my_profile_posts_button" style="text-decoration:none;">     </a></li>
-                                <li><a id="my_profile_likes_button" style="text-decoration:none;">     </a>
-                                </li> -->
+                                <!-- <li><a id="my_profile_likes_button" style="text-decoration:none;">     </a> </li>  -->
                             </ul>
                         
 
@@ -552,20 +551,30 @@
 
                     <!-- USER LIKES TAB -->
                     <div id='Likes' class="tabcontent is-hidden">
-                        <h3 class="title">Liked Songs</h3>
-                        <ul>
-                            <li>Song1</li>
-                            <li>Song2</li>
-                        </ul>
+                        <div id = "like_tab">
+
+                            <!-- <h3 class="title">Liked Songs</h3>
+                                <ul>
+                                    <li>Song1</li>
+                                    <li>Song2</li>
+                                </ul> -->
+
+
+                        </div>
                     </div>
 
                     <!-- USER POSTS TAB -->
                     <div id='Posts' class="tabcontent is-hidden">
-                        <h3 class="title">Songs Posted</h3>
-                        <ul>
-                            <li>Post 1</li>
-                            <li>Post 2</li>
-                        </ul>
+                        <div id = "post_tab">
+
+                            <!-- <h3 class="title">Liked Songs</h3>
+                                <ul>
+                                    <li>Song1</li>
+                                    <li>Song2</li>
+                                </ul> -->
+
+
+                        </div>
                     </div>
 
                 </div>
